--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <a href="mailto:bogdan.muntean98@gmail.com?subject=Salutare!" class="ListaLink"
                         title="Vezi profilul meu de Twitter." target="_blank" rel="noreferrer noopener">
                         <h2 class="ListaTitlu">📧 E-mail:</h2>
-                        <p class="ListaText" itemprop="email">bogdan.muntean1998@gmail.com</p>
+                        <p class="ListaText" itemprop="email">bm.bogdanmuntean@gmail.com</p>
                     </a>
                 </li>
             </ul>
